# baby-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
baby_agent/: agent.py  cli.py  tui.py
baby_agent/skills/: skill_manager.py
baby_agent/tools/: file_tools.py  shell_tools.py
baby_agent/utils/: openai_client.py
